--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,26 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.zebra.kiosk_application">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.symbol.emdk.permission.EMDK" />
 
-
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:fullBackupContent="@xml/backup_descriptor">
+        tools:ignore="GoogleAppIndexingWarning">
+        <uses-library
+            android:name="com.symbol.emdk"
+            android:required="true" />
 
-        <uses-library android:name="com.symbol.emdk"
-            android:required="true"/>
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,10 +29,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventViewActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".RegistrationActivity"
-            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".EventViewActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".EventSelectionActivity"></activity>
     </application>
 
 </manifest>
