--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,20 +16,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
-    implementation 'com.android.support:exifinterface:28.0.0-rc01'
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:exifinterface:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     compileOnly fileTree(include: ['com.symbol.emdk.jar'], dir: 'C:\\Users\\TV4548\\AppData\\Local\\Android\\Sdk\\add-ons\\addon-symbol_emdk-symbol-26\\libs')
     implementation fileTree(exclude: ['com.symbol.emdk.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
